--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav>
-            <a  href="./index.html">WebStudio</a>
+        <nav class="main-nav">
+            <a  href="./index.html" class="web-studio"><span class="web">Web</span>Studio</a>
             <ul>
             <li><a href="#studio">Studio</a></li>
-        <li> <a href="#portfolio">Portfolio</a></li>
+        <li> <a href="./portfolio.html">Portfolio</a></li>
         <li>   <a href="#contacts">Contacts</a></li>
         </ul>
         </nav>
@@ -76,7 +85,7 @@
     </main>
 <br><br><br>
     <footer>
-        <a  href = "./index.html" >WebStudio</a>
+        <a  href="./index.html" class="web-studio"><span class="web">Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
