--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </header>
 
     <main>
-        <section>
-        <h1>Effective Solutions  for Your Business</h1>
-<button type="button">Order Service</button>
+        <section class="part-one">
+        <h1 class="main-title">Effective Solutions  for Your Business</h1>
+<button type="button" class="button-one">Order Service</button>
 
 </section>
 
