--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Studio</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
 </section>
 
 <section>
-    <h2>About us</h2>
+    <h2 class="section-title">About us</h2>
     <ul>
 <li><h3>Strategy</h3>
 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
@@ -56,7 +56,7 @@
 </section>
 
 <section>
-<h2>What are we doing</h2>
+<h2 class="section-title">What are we doing</h2>
 <ul>
 <li><img src ="./images/q1.jpg" alt="Computer" width = "360"></li>
 <li><img src ="./images/q2.jpg" alt="Displays" width = "360"></li>
@@ -64,8 +64,8 @@
 </ul>
 </section>
 
-<section>
-   <h2>Our Team</h2><br>
+<section class="team">
+   <h2 class="section-title">Our Team</h2><br>
     <ul> 
      <li><img src ="./images/img1.jpg" alt="Product Designer" width = "264">
    <h3>Mark Guerrero</h3>
@@ -85,7 +85,7 @@
     </main>
 <br><br><br>
     <footer>
-        <a  href="./index.html" class="web-studio"><span class="web">Web</span>Studio</a>
+        <a  href="./index.html" class="web-studio-footer"><span class="web">Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
