--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&display=swap" rel="stylesheet">
+    
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a  href="./index.html">WebStudio</a>
-            <ul>
-            <li><a href="./index.html">Studio</a></li>
-        <li> <a href="#portfolio">Portfolio</a></li>
-        <li>   <a href="#contacts">Contacts</a></li>
-        </ul>
-        </nav>
-        <address>
-            <ul>
+  <header>
+    <nav class="main-nav">
+        <a  href="./portfolio.html" class="web-studio"><span class="web">Web</span>Studio</a>
+        <ul>
+        <li><a href="./index.html">Studio</a></li>
+    <li> <a href="./portfolio.html">Portfolio</a></li>
+    <li>   <a href="#contacts">Contacts</a></li>
+    </ul>
+    </nav>
+    <address>
+        <ul>
 
-           <li><a href = "mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href = "tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-        </address>
-    </header>
+       <li><a href = "mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href = "tel:+110001111111">+11 (000) 111-11-11</a></li>
+    </ul>
+    </address>
+</header>
 
     <main>
 
@@ -85,7 +94,7 @@
 
     <br><br><br>
     <footer>
-        <a  href = "./index.html" >WebStudio</a>
+        <a  href = "./index.html"  class="web-studio-footer"><span class = "web">Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     </footer>
