--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="main-nav">
-            <a  href="./index.html" class="web-studio"><span class="web">Web</span>Studio</a>
-            <ul>
-            <li><a href="#studio">Studio</a></li>
-        <li> <a href="./portfolio.html">Portfolio</a></li>
-        <li>   <a href="#contacts">Contacts</a></li>
+    <header class="main-nav">
+        <nav>
+            <a  href="./index.html" class="web-studio link">Web<span class="web">Studio</span></a>
+            <ul class="list">
+            <li><a href="./index.html" class="studio-nav link">Studio</a></li>
+        <li> <a href="./portfolio.html"class="studio-nav link">Portfolio</a></li>
+        <li>   <a href=""class="studio-nav link">Contacts</a></li>
         </ul>
         </nav>
-        <address>
-            <ul>
+        <address class="address-header">
+            <ul class="list">
 
-           <li><a href = "mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href = "tel:+110001111111">+11 (000) 111-11-11</a></li>
+           <li><a href = "mailto:info@devstudio.com" class="address link">info@devstudio.com</a></li>
+            <li><a href = "tel:+110001111111" class="address link">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
     </header>
@@ -85,7 +85,7 @@
     </main>
 <br><br><br>
     <footer>
-        <a  href="./index.html" class="web-studio-footer"><span class="web">Web</span>Studio</a>
+        <a  href="./index.html" class="web-studio link">Web<span class="web-footer">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
