--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="main-nav">
-        <a  href="./portfolio.html" class="web-studio"><span class="web">Web</span>Studio</a>
+        <a  href="./portfolio.html" class="web-studio link">Web<span class="web">Studio</span></a>
         <ul>
         <li><a href="./index.html">Studio</a></li>
     <li> <a href="./portfolio.html">Portfolio</a></li>
@@ -94,7 +94,7 @@
 
     <br><br><br>
     <footer>
-        <a  href = "./index.html"  class="web-studio-footer"><span class = "web">Web</span>Studio</a>
+        <a  href = "./portfolio.html"  class="web-studio link">Web<span class="web-footer">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     </footer>
