--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 
 <section>
     <h2 class="section-title">About us</h2>
-    <ul>
-<li><h3>Strategy</h3>
-<p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
-<li><h3>Punctuality</h3>
-<p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-<li><h3>Diligence</h3>
-<p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-<li><h3>Technologies</h3>
-<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+    <ul class="list">
+<li><h3 class="part-two-title">Strategy</h3>
+<p class="part-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+<li><h3 class="part-two-title">Punctuality</h3>
+<p class="part-two-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+<li><h3 class="part-two-title">Diligence</h3>
+<p class="part-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+<li><h3 class="part-two-title">Technologies</h3>
+<p class="part-two-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
 </ul>
 </section>
 
 <section>
 <h2 class="section-title">What are we doing</h2>
-<ul>
+<ul class="list">
 <li><img src ="./images/q1.jpg" alt="Computer" width = "360"></li>
 <li><img src ="./images/q2.jpg" alt="Displays" width = "360"></li>
 <li><img src ="./images/q3.jpg" alt="Phone" width = "360"></li>
