--- a/index.html
+++ b/index.html
@@ -66,27 +66,27 @@
 
 <section class="team">
    <h2 class="section-title">Our Team</h2><br>
-    <ul> 
-     <li><img src ="./images/img1.jpg" alt="Product Designer" width = "264">
-   <h3>Mark Guerrero</h3>
-   <p>Product Designer</p></li>
+    <ul class="list"> 
+     <li class="li-one"><img src ="./images/img1.jpg" alt="Product Designer" width = "264">
+   <h3 class="part-three-title">Mark Guerrero</h3>
+   <p class="part-three-text">Product Designer</p></li>
   <li> <img src ="./images/img2.jpg" alt="Tom Ford" width = "264">
-   <h3>Tom Ford</h3>
-   <p>Frontend Developer</p></li>
+   <h3 class="part-three-title">Tom Ford</h3>
+   <p class="part-three-text">Frontend Developer</p></li>
    <li><img src ="./images/img3.jpg" alt="Camila Garcia" width = "264">
-   <h3>Camila Garcia</h3>
-   <p>Marketing</p></li>
+   <h3 class="part-three-title">Camila Garcia</h3>
+   <p class="part-three-text">Marketing</p></li>
    <li><img src ="./images/img4.jpg" alt="Daniel Wilson" width = "264">
-   <h3>Daniel Wilson</h3>
-   <p>UI Designer</p></li>
+   <h3 class="part-three-title">Daniel Wilson</h3>
+   <p class="part-three-text">UI Designer</p></li>
      
 </ul>
 </section>
     </main>
 <br><br><br>
-    <footer>
+    <footer class="footer-page-one">
         <a  href="./index.html" class="web-studio link">Web<span class="web-footer">Studio</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
