--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </section>
 
 <section class="team">
-   <h2 class="section-title">Our Team</h2><br>
+   <h2 class="section-title">Our Team</h2>
     <ul class="list"> 
      <li class="li-one"><img src ="./images/img1.jpg" alt="Product Designer" width = "264">
    <h3 class="part-three-title">Mark Guerrero</h3>
