--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
      <li class="li-one"><img src ="./images/img1.jpg" alt="Product Designer" width = "264">
    <h3 class="part-three-title">Mark Guerrero</h3>
    <p class="part-three-text">Product Designer</p></li>
-  <li> <img src ="./images/img2.jpg" alt="Tom Ford" width = "264">
+  <li class="li-one"> <img src ="./images/img2.jpg" alt="Tom Ford" width = "264">
    <h3 class="part-three-title">Tom Ford</h3>
    <p class="part-three-text">Frontend Developer</p></li>
-   <li><img src ="./images/img3.jpg" alt="Camila Garcia" width = "264">
+   <li class="li-one"><img src ="./images/img3.jpg" alt="Camila Garcia" width = "264">
    <h3 class="part-three-title">Camila Garcia</h3>
    <p class="part-three-text">Marketing</p></li>
-   <li><img src ="./images/img4.jpg" alt="Daniel Wilson" width = "264">
+   <li class="li-one"><img src ="./images/img4.jpg" alt="Daniel Wilson" width = "264">
    <h3 class="part-three-title">Daniel Wilson</h3>
    <p class="part-three-text">UI Designer</p></li>
      
