--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
   <header>
     <nav class="main-nav">
         <a  href="./portfolio.html" class="web-studio link">Web<span class="web">Studio</span></a>
-        <ul>
-        <li><a href="./index.html">Studio</a></li>
+        <ul class="list">
+        <li><a href="./index.html" class="studio-nav link">Studio</a></li>
     <li> <a href="./portfolio.html">Portfolio</a></li>
     <li>   <a href="#contacts">Contacts</a></li>
     </ul>
@@ -91,12 +91,9 @@
             </ul>
         </section>
     </main>
-
-    <br><br><br>
     <footer>
         <a  href = "./portfolio.html"  class="web-studio link">Web<span class="web-footer">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
     </footer>
 </body>
 </html>
