--- a/portfolio.html
+++ b/portfolio.html
@@ -20,15 +20,15 @@
         <a  href="./portfolio.html" class="web-studio link">Web<span class="web">Studio</span></a>
         <ul class="list">
         <li><a href="./index.html" class="studio-nav link">Studio</a></li>
-    <li> <a href="./portfolio.html">Portfolio</a></li>
-    <li>   <a href="#contacts">Contacts</a></li>
+    <li> <a href="./portfolio.html" class="studio-nav link">Portfolio</a></li>
+    <li>   <a href="" class="studio-nav link">Contacts</a></li>
     </ul>
     </nav>
-    <address>
-        <ul>
+    <address class="address-header">
+        <ul class="list">
 
-       <li><a href = "mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href = "tel:+110001111111">+11 (000) 111-11-11</a></li>
+       <li><a href = "mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
+        <li><a href = "tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
     </ul>
     </address>
 </header>
