--- a/portfolio.html
+++ b/portfolio.html
@@ -27,24 +27,23 @@
     <address class="address-header">
         <ul class="list">
 
-       <li><a href = "mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
-        <li><a href = "tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
+       <li><a href = "mailto:info@devstudio.com" class="address link">info@devstudio.com</a></li>
+        <li><a href = "tel:+110001111111" class="address link">+11 (000) 111-11-11</a></li>
     </ul>
     </address>
 </header>
 
     <main>
 
-        <ul>
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
+      <section>
+        <h1>Info</h1>
+        <ul class="list">
+            <li><button type="button" class="button-page-two">All</button></li>
+            <li><button type="button" class="button-page-two">Web Site</button></li>
+            <li><button type="button" class="button-page-two">App</button></li>
+            <li><button type="button" class="button-page-two">Design</button></li>
+            <li><button type="button" class="button-page-two">Marketing</button></li>
         </ul>
-
-
-        <section>
             <ul>
           <h3>  <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300">
             <h3>Banking App Interface Concept</h3>
@@ -60,7 +59,6 @@
             <p>App</p></li>   
 
           </ul>
-          </section>
 
           <section>
             <ul>
@@ -75,9 +73,6 @@
             <p>Marketing</p></li>
          
         </ul>
-        </section>
-
-        <section>
             <ul>
                 <li><img src="./images/portfolio-images/img-7.jpg" alt="Stories Concept" width="360" height="300">
                     <h3>Instagram Stories Concept</h3>
