--- a/portfolio.html
+++ b/portfolio.html
@@ -44,44 +44,36 @@
             <li><button type="button" class="button-page-two">Design</button></li>
             <li><button type="button" class="button-page-two">Marketing</button></li>
         </ul>
-            <ul>
-          <h3>  <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300">
-            <h3>Banking App Interface Concept</h3>
+            <ul class="list">
+         <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300">
+            <h2>Banking App Interface Concept</h2>
         <p>App</p></li>
 
 
           <li><img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300">
-            <h3>Cashless Payment</h3>
+            <h2>Cashless Payment</h2>
             <p>Marketing</p></li>
 
           <li><img src="./images/portfolio-images/img-3.jpg" alt="Laptop&Phone" width="360" height="300">
-            <h3>Meditation App</h3>
+            <h2>Meditation App</h2>
             <p>App</p></li>   
-
-          </ul>
-
-          <section>
-            <ul>
           <li><img src="./images/portfolio-images/img-4.jpg" alt="Taxi" width="360" height="300">
-            <h3>Taxi Service</h3>
+            <h2>Taxi Service</h2>
             <p>Marketing</p></li>   
           <li><img src="./images/portfolio-images/img-5.jpg" alt="Screen Illustrations" width="360" height="300">
-            <h3>Screen Illustrations</h3>
+            <h2>Screen Illustrations</h2>
             <p>Design</p></li>   
           <li><img src="./images/portfolio-images/img-6.jpg" alt="Girl" width="360" height="300">
-            <h3>Online Courses</h3>
+            <h2>Online Courses</h2>
             <p>Marketing</p></li>
-         
-        </ul>
-            <ul>
                 <li><img src="./images/portfolio-images/img-7.jpg" alt="Stories Concept" width="360" height="300">
-                    <h3>Instagram Stories Concept</h3>
+                    <h2>Instagram Stories Concept</h2>
                     <p>Design</p></li>
                 <li><img src="./images/portfolio-images/img-8.jpg" alt="Food" width="360" height="300">
-                    <h3>Organic Food</h3>
+                    <h2>Organic Food</h2>
                     <p>Web Site</p></li>
                 <li><img src="./images/portfolio-images/img-9.jpg" alt="Cofee" width="360" height="300">
-                    <h3>Fresh Coffee</h3>
+                    <h2>Fresh Coffee</h2>
                     <p>Web Site</p></li>
             </ul>
         </section>
