--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,10 @@
             <li><button type="button" class="button-page-two">Marketing</button></li>
         </ul>
             <ul class="list">
-              <li>
+              <li><a href="" class="link">
          <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300">
             <h2>Banking App Interface Concept</h2>
-        <p>App</p></li>
+        <p>App</p></li></a>
 
 
           <li><img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300">
@@ -79,9 +79,9 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer-page-two">
         <a  href = "./portfolio.html"  class="web-studio link">Web<span class="web-footer">Studio</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
