--- a/portfolio.html
+++ b/portfolio.html
@@ -45,37 +45,37 @@
             <li><button type="button" class="button-page-two">Marketing</button></li>
         </ul>
             <ul class="list">
-              <li><a href="" class="link">
+              <li><a href="" class="link"> </a>
          <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300">
-            <h2>Banking App Interface Concept</h2>
-        <p>App</p></li></a>
+            <h2  class="part-three-title">Banking App Interface Concept</h2>
+        <p class="part-three-text">App</p></li>
 
-
+                <a href="" class="link"></a>
           <li><img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300">
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p></li>
+            <h2 class="part-three-title">Cashless Payment</h2>
+            <p class="part-three-text">Marketing</p></li>
 
           <li><img src="./images/portfolio-images/img-3.jpg" alt="Laptop&Phone" width="360" height="300">
-            <h2>Meditation App</h2>
-            <p>App</p></li>   
+            <h2 class="part-three-title">Meditation App</h2>
+            <p class="part-three-text">App</p></li>   
           <li><img src="./images/portfolio-images/img-4.jpg" alt="Taxi" width="360" height="300">
-            <h2>Taxi Service</h2>
-            <p>Marketing</p></li>   
+            <h2 class="part-three-title">Taxi Service</h2>
+            <p class="part-three-text">Marketing</p></li>   
           <li><img src="./images/portfolio-images/img-5.jpg" alt="Screen Illustrations" width="360" height="300">
-            <h2>Screen Illustrations</h2>
-            <p>Design</p></li>   
+            <h2 class="part-three-title">Screen Illustrations</h2>
+            <p class="part-three-text">Design</p></li>   
           <li><img src="./images/portfolio-images/img-6.jpg" alt="Girl" width="360" height="300">
-            <h2>Online Courses</h2>
-            <p>Marketing</p></li>
+            <h2 class="part-three-title">Online Courses</h2>
+            <p class="part-three-text">Marketing</p></li>
                 <li><img src="./images/portfolio-images/img-7.jpg" alt="Stories Concept" width="360" height="300">
-                    <h2>Instagram Stories Concept</h2>
-                    <p>Design</p></li>
+                    <h2 class="part-three-title">Instagram Stories Concept</h2>
+                    <p class="part-three-text">Design</p></li>
                 <li><img src="./images/portfolio-images/img-8.jpg" alt="Food" width="360" height="300">
-                    <h2>Organic Food</h2>
-                    <p>Web Site</p></li>
+                    <h2 class="part-three-title">Organic Food</h2>
+                    <p class="part-three-text">Web Site</p></li>
                 <li><img src="./images/portfolio-images/img-9.jpg" alt="Cofee" width="360" height="300">
-                    <h2>Fresh Coffee</h2>
-                    <p>Web Site</p></li>
+                    <h2 class="part-three-title">Fresh Coffee</h2>
+                    <p class="part-three-text">Web Site</p></li>
             </ul>
         </section>
     </main>
