--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
             <h2  class="part-three-title">Banking App Interface Concept</h2>
         <p class="part-three-text">App</p></li>
 
-                <a href="" class="link"></a>
-          <li><img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300">
+        <li><a href="" class="link"></a>
+          <img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300">
             <h2 class="part-three-title">Cashless Payment</h2>
             <p class="part-three-text">Marketing</p></li>
 
