--- a/portfolio.html
+++ b/portfolio.html
@@ -47,36 +47,36 @@
             <ul class="list">
               <li>
                 <a href= "" class="link">
-         <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300"> </a>
-            <h2  class="part-three-title">Banking App Interface Concept</h2>
+         <img src="./images/portfolio-images/img-1.jpg" alt="Bank-App" width="360" height="300"> 
+            <h2  class="part-three-title">Banking App Interface Concept</h2></a>
         <p class="part-three-text">App</p></li>
 
         <li>
           <a href= "" class="link">
-          <img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300"></a>
-            <h2 class="part-three-title">Cashless Payment</h2>
+          <img src="./images/portfolio-images/img-2.jpg" alt="Scan QR Code" width="360" height="300">
+            <h2 class="part-three-title">Cashless Payment</h2></a>
             <p class="part-three-text">Marketing</p></li>
 
-          <li><a href= "" class="link"><img src="./images/portfolio-images/img-3.jpg" alt="Laptop&Phone" width="360" height="300"></a>
-            <h2 class="part-three-title">Meditation App</h2>
+          <li><a href= "" class="link"><img src="./images/portfolio-images/img-3.jpg" alt="Laptop&Phone" width="360" height="300">
+            <h2 class="part-three-title">Meditation App</h2></a>
             <p class="part-three-text">App</p></li>   
-          <li><a href= "" class="link"><img src="./images/portfolio-images/img-4.jpg" alt="Taxi" width="360" height="300"></a>
-            <h2 class="part-three-title">Taxi Service</h2>
+          <li><a href= "" class="link"><img src="./images/portfolio-images/img-4.jpg" alt="Taxi" width="360" height="300">
+            <h2 class="part-three-title">Taxi Service</h2></a>
             <p class="part-three-text">Marketing</p></li>   
-          <li><a href= "" class="link"><img src="./images/portfolio-images/img-5.jpg" alt="Screen Illustrations" width="360" height="300"></a>
-            <h2 class="part-three-title">Screen Illustrations</h2>
+          <li><a href= "" class="link"><img src="./images/portfolio-images/img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+            <h2 class="part-three-title">Screen Illustrations</h2></a>
             <p class="part-three-text">Design</p></li>   
-          <li><a href= "" class="link"><img src="./images/portfolio-images/img-6.jpg" alt="Girl" width="360" height="300"></a>
-            <h2 class="part-three-title">Online Courses</h2>
+          <li><a href= "" class="link"><img src="./images/portfolio-images/img-6.jpg" alt="Girl" width="360" height="300">
+            <h2 class="part-three-title">Online Courses</h2></a>
             <p class="part-three-text">Marketing</p></li>
-                <li><a href= "" class="link"><img src="./images/portfolio-images/img-7.jpg" alt="Stories Concept" width="360" height="300"></a>
-                    <h2 class="part-three-title">Instagram Stories Concept</h2>
+                <li><a href= "" class="link"><img src="./images/portfolio-images/img-7.jpg" alt="Stories Concept" width="360" height="300">
+                    <h2 class="part-three-title">Instagram Stories Concept</h2></a>
                     <p class="part-three-text">Design</p></li>
-                <li><a href= "" class="link"><img src="./images/portfolio-images/img-8.jpg" alt="Food" width="360" height="300"></a>
-                    <h2 class="part-three-title">Organic Food</h2>
+                <li><a href= "" class="link"><img src="./images/portfolio-images/img-8.jpg" alt="Food" width="360" height="300">
+                    <h2 class="part-three-title">Organic Food</h2></a>
                     <p class="part-three-text">Web Site</p></li>
-                <li><a href= "" class="link"><img src="./images/portfolio-images/img-9.jpg" alt="Cofee" width="360" height="300"></a>
-                    <h2 class="part-three-title">Fresh Coffee</h2>
+                <li><a href= "" class="link"><img src="./images/portfolio-images/img-9.jpg" alt="Cofee" width="360" height="300">
+                    <h2 class="part-three-title">Fresh Coffee</h2></a>
                     <p class="part-three-text">Web Site</p></li>
             </ul>
         </section>
