--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <title>Studio</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins&family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="main-nav">
+    <header>
         <nav>
             <a  href="./index.html" class="web-studio link">Web<span class="web">Studio</span></a>
             <ul class="list">
@@ -42,7 +41,7 @@
 </section>
 
 <section>
-    <h2 class="section-title">About us</h2>
+    <h2 class="section-title" hidden>About us</h2>
     <ul class="list">
 <li><h3 class="part-two-title">Strategy</h3>
 <p class="part-two-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
